# tree-sitter-jx

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  add_lang_prefix.js  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jx.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJx/: jx.h
bindings/swift/TreeSitterJxTests/: TreeSitterJxTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: example.jx  example2.jx  example3.jx  example4.jx
